# MyCPP

./: .gitignore
C++Voice/: Spin_Lock.cpp  Timer.cc
C++_MUDUO/: Observable.cc  Observable_safe.cc
C++_SHILEI/: C++11.cpp  CComplex.cpp  CMyString.cpp  IteratorTest.cpp  MultiThread.cpp  Object.cpp  ObjectPool.cpp  Polymoph.cpp  Polymoph3.cpp  Polymorph2.cpp  SeqStack.cpp  SmartPtr.cpp  String.cpp  VectorIterator.cpp  adapter.cpp  atomic.cpp  bind1st.cpp  cast.cpp  condition.cpp  deletor.cpp  dynamic.cpp  emplace.cpp  emplace_back.cpp  evenfd.cpp  functional.cpp  functional2.cpp  inherit.cpp  lambda.cpp  lambda2.cpp  mutex.cpp  new.cpp  shared_ptr.cpp  template.cpp  test.c  threadpool.cpp  vector.cpp  virtual2.cpp  virutal.cpp
C++_WANG/: 2-1.cpp  2-2.cpp  2-3.cpp  2-4.cpp  2-5.cpp  lambda.cpp  nginx3_4_2.c  nginx3_5_3.c  nginx3_6_1.c  nginx3_7_3.c
CMAKE/add_exec_1/: CMakeLists.txt  main.cpp
CMAKE/add_exec_2/: CMakeLists.txt
CMAKE/add_exec_2/src/: sub.cpp
CMAKE/add_library/: CMakeLists.txt
CMAKE/add_library/src/: add.cpp  div.cpp  mult.cpp
CMAKE/muti_cmake/: CMakeLists.txt
CMAKE/muti_cmake/calc/: add.cpp  mult.cpp
CMAKE/muti_cmake/include/: calc.h
CMAKE/muti_cmake/sort/: CMakeLists.txt  select_sort.cpp
CMAKE/muti_cmake/test1/: CMakeLists.txt  test_calc.cpp
CMAKE/muti_cmake/test2/: CMakeLists.txt  test_sort.cpp
CMAKE/shared_in_static/calc/: CMakeLists.txt  div.cpp  sub.cpp
CMAKE/shared_in_static/include/: sort.h
CMAKE/shared_in_static/sort/: CMakeLists.txt  (+1 more)
CMAKE/static_in_static/: CMakeLists.txt
CMAKE/use_library/: CMakeLists.txt
CMAKE/use_library/include/: head.h
DesignPatterns/: AbstractFactory.cpp  Adapter.cpp  Decorator.cpp  FactoryMethod.cpp  Observer.cpp  Proxy.cpp  SimpleFactory.cpp  Singleton.cpp  Singleton2.cpp
MordenC++/: CRTP.cpp  SFINAE.cpp  StructuredBindings.cpp  VariadicTemplates.cpp  __func___.cpp  any.cpp  any_simple.cpp  barrier.cpp  condition_variable.cpp  constexpr_if.cpp  consumer_wait.cpp  core-awaitable-simple.cpp  coro-awaitable.cpp  coro_example.cpp  coro_fibonacci.cpp  counting_sepmaphore.cpp  decltype.cpp  emplace_back_test.cpp  enable_if.cpp  future1.cpp  future2.cpp  initializer_list.cpp  initializer_list2.cpp  is_lock_free.cpp  lambda.cpp  latch.cpp  livelock.cpp  lockfree_stack.cpp  optional1.cpp  optional2.cpp  packaged_task.cpp  packaged_task2.cpp  ptr_reset.cpp  random_range.h  recursive_mutex.cpp  reference.cpp  rvalue_extend.cpp  shared_lock.cpp  shared_ptr_count_r.cpp  shared_ptr_use_count.cpp  (+28 more)
MyCommmandLineParser/: CommandLineParser.hpp  CommandLineParserTest.cpp
MyThreadPool/: BuzyWaitThreadPool.cpp  BuzyWaitThreadPool.hpp  ThreadPool.h  ThreadPoolSimple.h  ThreadPoolSimple.hpp  ThreadPoolSimpleTest.cpp  ThreadPoolTest.cpp  ThreadPoolTestSimple.cpp
NET/: epoll_callback.cpp  epoll_cin.cpp
NET_HEIMA/: 01htonl.c  02inet_pton.c  02ntohl.c  03tcp_client.c  04tcp_server.c  05pthread_server.c  06select.c  07select_advance.c  08pipe_epoll.c  09epoll_server.c  10reactor_1.c  11epoll_loop.c  12udp_server.c  13udp_client.c
SYS/: aa.txt  condition_variable.cpp  dup2.cpp  epoll_callback.cpp  exec.cpp  exec2.cpp  fifo_read.cpp  fifo_write.cpp  lseek.cpp  mmap.cpp  newmytest.txt  pipe1.cpp  pipe2.cpp  pp.txt  pthread_cond.cpp  pthread_mutex_destroy.cpp  pthread_mutex_errorcheck.cpp  pthread_rwlock.cpp  pthread_rwlock_prefer_writer.cpp  pthread_sem.cpp  shared_mutex.cpp  spin_lock.cpp  tcp_client.cpp  tcp_client_blocking_recv.cpp  tcp_client_blocking_send.cpp  tcp_client_nonblocking_recv.cpp  tcp_client_nonblocking_send.cpp  tcp_server.cpp  tcp_server_no_recv.cpp  tcp_server_select.cpp  write.cpp
modern30/: _nvwa.h  fc_queue.h  meta_template.cpp  smart_ptr.cpp
(+5 files in other folders)
